apps/gcsweb/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gcsweb
  namespace: gcsweb
  labels:
    app: gcsweb
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  selector:
    app: gcsweb
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
